stuck with cards stopping to turn when I found 1 match

--- a/Memory-game/style.css
+++ b/Memory-game/style.css
@@ -10,7 +10,9 @@
 
 body {
     width: 100vw;
-    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .wrapper {
@@ -18,6 +20,8 @@ body {
     max-width: 600px; 
     display: flex;
     flex-wrap: wrap;
+    box-sizing: border-box;
+    border: 1px solid var(--main-color)
 }
 
 .header {
@@ -26,7 +30,7 @@ body {
     flex-wrap: wrap;
     border-color: var(--main-color);
     border-style: solid;
-    border-width: 2px 2px 0px 2px;
+    border-width: 1px 1px 1px 2px;
 }
 
 .difficulty {
@@ -76,5 +80,28 @@ body {
     width: 100%;
     aspect-ratio: 1/1;
     background-color: var(--main-color);
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+
 }
 
+.card {
+    width: 100%;
+}
+
+img {
+    display: none;
+    width: 100%;
+    height: 100%;
+}
+
+.backside {
+    display: block;
+    width: 100%;
+    height: 100%;
+    border: 1px solid var(--main-color);
+    background-color: rgb(229, 173, 224);
+    box-sizing: border-box;
+
+}
